# crud

./: pyproject.toml
backend/: banco_crud.db  crud.py  database.py  main.py  models.py  router.py  schemas.py
frontend/: app.py
